@@ -11,7 +11,8 @@ ACLOCAL_AMFLAGS = -I m4
 
 # pkg-config file for the mpg123 library
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libmpg123.pc
+# That is either libmpg123.pc or libmpg123_64.pc (or libmpg123_128, for that matter).
+pkgconfig_DATA = lib@LIBNAME@.pc
 
 # mpg123.spec is autogenerated but needs to be present in tarball!
 EXTRA_DIST = \
@@ -50,3 +51,6 @@ EXTRA_DIST = \
 	ports/mpg123_.pas \
 	scripts/benchmark-cpu.pl
 
+# Large file supporting version, where necessary, gets its pkg-config file constructed.
+libmpg123_@LARGEFILE_BITS@.pc: libmpg123_large.pc
+	cp $< $@
