@@ -1,5 +1,8 @@
 Changes in libmpg123 libtool interface versions...
 
+23.0.23
+	- Version increase to mark the point where the explicit split between normal and large-file-enabled library has been introduced.
+
 22.0.22
 	- Experimental framebyframe API added.
 
