@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libmpg123@LARGEFILE_SUFFIX@
+Description: An optimised MPEG Audio decoder, @LARGEFILE_BITS@ bit file offset version for largefile-sensitive systems.
+Requires: 
+Version: @PACKAGE_VERSION@
+Libs: -L${libdir} -lmpg123@LARGEFILE_SUFFIX@
+Cflags: -I${includedir} 
