@@ -19,18 +19,16 @@ testcpu_LDADD = getcpuflags.$(OBJEXT)
 CLEANFILES = *.a
 
 
-#lib_LIBRARIES = libmpg123.a
-lib_LTLIBRARIES = libmpg123.la
+# The library can have different names, depending on largefile setup.
+# Libtool macros think they're smart. Because of that @LIBNAME@.la does not work, it must be lib@LIBNAME@.la .
+lib_LTLIBRARIES = lib@LIBNAME@.la
 nodist_include_HEADERS = mpg123.h
 
-#libmpg123_a_LIBADD = @DECODER_OBJ@
-#libmpg123_a_DEPENDENCIES = @DECODER_OBJ@
+lib@LIBNAME@_la_LDFLAGS = -no-undefined -version-info @LIBMPG123_VERSION@ -export-symbols-regex '^mpg123_'
+lib@LIBNAME@_la_LIBADD = @DECODER_LOBJ@
+lib@LIBNAME@_la_DEPENDENCIES = @DECODER_LOBJ@
 
-libmpg123_la_LDFLAGS = -no-undefined -version-info @LIBMPG123_VERSION@ -export-symbols-regex '^mpg123_'
-libmpg123_la_LIBADD = @DECODER_LOBJ@
-libmpg123_la_DEPENDENCIES = @DECODER_LOBJ@
-
-libmpg123_la_SOURCES = \
+lib@LIBNAME@_la_SOURCES = \
 	compat.c \
 	compat.h \
 	parse.c \
@@ -67,7 +65,7 @@ libmpg123_la_SOURCES = \
 	index.h \
 	index.c
 
-EXTRA_libmpg123_la_SOURCES = \
+EXTRA_lib@LIBNAME@_la_SOURCES = \
 	icy.c \
 	icy2utf8.c \
 	l2tables.h \
